--- a/views/user/Login.ejs
+++ b/views/user/Login.ejs
@@ -91,11 +91,13 @@
                             Show Password
                           </label>
                         </div>
-                        <!-- <div
-                        class="login_footer form-group align-items-center justify-content-end"
-                      >
-                        <a class="text-muted" href="#">Forgot password?</a>
-                      </div> -->
+                        <div
+                          class="login_footer form-group align-items-center justify-content-end"
+                        >
+                          <a class="text-muted" href="/user/load-forgot-pass"
+                            >Forgot password?</a
+                          >
+                        </div>
                         <div
                           class="form-group d-flex align-items-center justify-content-center"
                         >
