--- a/views/user/partials/footer.ejs
+++ b/views/user/partials/footer.ejs
@@ -187,6 +187,8 @@
     </div>
   </div>
   <!-- Vendor JS-->
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10.16.6/dist/sweetalert2.all.min.js"></script>
   <script src="/userassets/js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="/userassets/js/vendor/jquery-3.6.0.min.js"></script>
   <script src="/userassets/js/vendor/jquery-migrate-3.3.0.min.js"></script>
