--- a/views/user/partials/header.ejs
+++ b/views/user/partials/header.ejs
@@ -20,6 +20,8 @@
     <!-- Template CSS -->
     <link rel="stylesheet" href="/userassets/css/main.css" />
     <!-- <script src="/node_modules/sweetalert2/dist/sweetalert2.all.min.js"></script> -->
+  
+
 
   </head>
 
@@ -105,7 +107,7 @@
                     </a>
                   </div>
                   <div class="header-action-icon-2">
-                    <a class="mini-cart-icon" href="shop-cart.html">
+                    <a class="mini-cart-icon" href="/user/load-cart">
                       <img
                         alt="Evara"
                         src="/userassets/imgs/theme/icons/icon-cart.svg"
