--- a/views/admin/admincategory.ejs
+++ b/views/admin/admincategory.ejs
@@ -257,6 +257,7 @@
                       id="categoryName"
                     />
                   </div>
+
                   <div class="mb-4">
                     <label class="form-label">Status</label>
                     <select
@@ -318,8 +319,9 @@
                         </td>
                         <td class="text-center">
                           <a
-                            href="/admin/delete-category/<%= element._id %>"
-                            class="btn btn-danger"
+                            href=""
+                            class="btn btn-danger DELETE"
+                            data-category-id="<%= element._id%>"
                             >Delete</a
                           >
                         </td>
@@ -420,6 +422,59 @@
           });
       });
     </script>
+    <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        const deleteButtons = document.querySelectorAll(".DELETE");
+
+        deleteButtons.forEach((button) => {
+          button.addEventListener("click", async (event) => {
+            event.preventDefault();
+            const categoryId = button.getAttribute("data-category-id");
+            console.log(categoryId);
+
+            // Use SweetAlert to confirm the deletion
+            if (categoryId) {
+              Swal.fire({
+                title: "Are you sure?",
+                text: "You won't be able to revert this!",
+                icon: "warning",
+                showCancelButton: true,
+                confirmButtonColor: "#3085d6",
+                cancelButtonColor: "#d33",
+                confirmButtonText: "Yes, delete it!",
+              }).then((result) => {
+                if (result.isConfirmed) {
+                  fetch(`/admin/delete-category/${categoryId}`, {
+                    method: "DELETE",
+                  })
+                    .then((response) => {
+                      if (response.status === 200) {
+                        Swal.fire({
+                          position: "top-center",
+                          icon: "success",
+                          title: "The category has been deleted.",
+                          showConfirmButton: false,
+                          timer: 1500,
+                        }).then(() => {
+                          // Reload the page after the alert is closed
+                          window.location.href = "/admin/view-allcategory";
+                        });
+                      } else {
+                        // Handle errors, such as displaying an error message.
+                        console.error("Error deleting category.");
+                      }
+                    })
+                    .catch((error) => {
+                      console.error("An error occurred:", error);
+                    });
+                }
+              });
+            }
+          });
+        });
+      });
+    </script>
+
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10.16.6/dist/sweetalert2.all.min.js"></script>
     <script src="/adminassets/js/vendors/jquery-3.6.0.min.js"></script>
     <script src="/adminassets/js/vendors/bootstrap.bundle.min.js"></script>
