--- a/views/user/forgotPassword.ejs
+++ b/views/user/forgotPassword.ejs
@@ -22,25 +22,30 @@
 
   </head>
   <body>
-    <div class="container mt-5">
-      <div class="row justify-content-center">
+    
+    <div class="container  mt-5">
+      <div class="row justify-content-center mt-50">
         <div>
 
-        </div>
-          <div class="col-md-6" id="outerDiv" style="display: block;">
-              <div class="text-center">
+        </div >
+          <div class="col-lg-5 card" id="outerDiv" style="display: block;">
+              <div class="text-center card-header text-center">
                   <h2>Forgot Password</h2>
                   <p class="lead">Enter your email to receive a password reset OTP.</p>
               </div>
               <form>
-                  <div class="mb-3">
-                      <label for="email" class="form-label">Email</label>
-                      <input type="email" class="form-control" id="email" name="email">
+                  <div class="mb-3 mt-10">
+                      <label for="email" class="form-label">Email :</label>
+                      <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email...">
                       <p style="display: none;" id="emailVm" class="text-danger">please enter valid email address</p>
                   </div>
 
-  
-                  <button type="button" class="btn btn-primary" onclick="" id="submitB">Send OTP</button>
+                  <div class="d-flex align-items-center justify-content-center mb-15">
+                    <button type="button" class="btn btn-primary" onclick="" id="submitB">Send OTP</button>
+                  </div>
+                  <div class="d-flex justify-content-end">
+                    <div id="timer"></div>
+                  </div>
               </form>
               <div id="verifyOtpdiv" style="display: none;">
                 <form>
@@ -49,14 +54,15 @@
                       <input type="text" class="form-control" id="OTP" name="otp">
                       <p style="display: none;" id="otpVm" class="text-danger">Incorrect OTP</p>
                   </div>
-                  
-  
-                  <button type="button" class="btn btn-primary" onclick="" id="OTPSubmitBtn">Verify OTP</button>
+                  <div class="d-flex align-items-center justify-content-center mb-20">
+                    <button type="button" class="btn btn-primary" onclick="" id="OTPSubmitBtn">Verify OTP</button>
+                  </div>
               </form>
               </div>
           </div>
       </div>
   </div>
+
   <div class="container mt-5" id="passwordCdiv" style="display: none;">
     <div class="row justify-content-center">
         <div class="col-md-6">
@@ -97,6 +103,7 @@
     const verifyOtpDiv = document.getElementById("verifyOtpdiv")
     const OTPSubmitBtn = document.getElementById("OTPSubmitBtn")
     const passwordResetDiv =  document.getElementById("passwordCdiv")
+    const Timer = document.getElementById("timer")
   document.addEventListener("DOMContentLoaded", async function () {
     const submitBtnEmail = document.getElementById("submitB")
     submitBtnEmail.addEventListener("click",async (event)=>{
@@ -128,6 +135,11 @@
                 timer: 3000,
                 timerProgressBar: true,
               });
+              // send otp to resend otp
+              submitBtnEmail.style.display = "none"
+              startCountdown()
+              Timer.style.display = "block"
+
               verifyOtpDiv.style.display = "block"
               OTPSubmitBtn.addEventListener("click", async(event)=>{
                 const enteredOtp = document.getElementById("OTP").value
@@ -231,7 +243,25 @@
             });
         }
     })
-  })
+
+function startCountdown() {
+      let remainingTime = 58;
+
+      const countdown = setInterval(() => {
+        Timer.innerHTML = `Resent otp: ${remainingTime} sec`;
+
+        remainingTime--;
+
+        if (remainingTime < 0) {
+          clearInterval(countdown);
+          console.log("Countdown completed!");
+          submitBtnEmail.innerText = "Resent OTP"
+          submitBtnEmail.style.display = "block"
+          Timer.style.display = "none"
+        }
+      }, 1000);
+    }
+ })
 function emailValidation(email) {
       const pattern = /^\w+([.-]?\w+)*@\w+([.-]?\w+)*(\.\w{2,3})+$/;
       return pattern.test(email);
