--- a/views/user/partials/footer.ejs
+++ b/views/user/partials/footer.ejs
@@ -44,7 +44,7 @@
      <section class="section-padding footer-mid">
       <div class="container pt-15 pb-20">
         <div class="row">
-          <div class="col-lg-4 col-md-6">
+          <!-- <div class="col-lg-4 col-md-6">
             <div class="widget-about font-md mb-md-5 mb-lg-0">
               <div class="logo logo-width-1 wow fadeIn animated">
                 <a href="index.html"
@@ -93,7 +93,7 @@
                 /></a>
               </div>
             </div>
-          </div>
+          </div> -->
           <div class="col-lg-2 col-md-3">
             <h5 class="widget-title wow fadeIn animated">About</h5>
             <ul class="footer-list wow fadeIn animated mb-sm-5 mb-md-0">
@@ -172,7 +172,7 @@
     </div>
   </footer>
   <!-- Preloader Start -->
-  <div id="preloader-active">
+  <!-- <div id="preloader-active">
     <div class="preloader d-flex align-items-center justify-content-center">
       <div class="preloader-inner position-relative">
         <div class="text-center">
@@ -185,7 +185,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <!-- Vendor JS-->
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10.16.6/dist/sweetalert2.all.min.js"></script>
@@ -212,6 +212,7 @@
   <!-- Template  JS -->
   <script src="/userassets/js/main.js"></script>
   <script src="/userassets/js/shop.js"></script>
+  
 </body>
 
 <!-- Mirrored from wp.alithemes.com/html/evara/evara-frontend/index-4.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 01 Aug 2021 15:26:20 GMT -->
