--- a/views/user/partials/header.ejs
+++ b/views/user/partials/header.ejs
@@ -70,7 +70,7 @@
                     <li> <a href="/user/signup">Sign Up</a></li> 
                   </ul>
                <%}else{%>  
-                <i class="fi-rs-user"></i>
+                <a href="/user/profile"><i class="fi-rs-user"></i></a>
                 <!-- <a href="#">ejs</a> -->
                 <span class="ml-10 mr-10">|</span>
                <a href="/user/logout">Log Out</a> 
