--- a/views/user/productdetails.ejs
+++ b/views/user/productdetails.ejs
@@ -583,7 +583,6 @@
                 <div class="col-md-6 col-sm-12 col-xs-12">
                   <div class="detail-gallery">
                     <span class="zoom-icon"><i class="fi-rs-search"></i></span>
-                   
                     <div class="product-image-slider">
                       <figure class="border-radius-10">
                         <img
@@ -591,6 +590,7 @@
                           alt="product image"
                         />
                       </figure> 
+                      <figure class="border-radius-10">
                         <img
                           src="<%= product.images[1]?.path %>"
                           alt="product image"
@@ -625,7 +625,6 @@
                         </div>
                       <% }) %>
                     </div>
-                    
                   </div>
                 </div>
                 <div class="col-md-6 col-sm-12 col-xs-12">
@@ -741,7 +740,7 @@
                     </div> -->
                     <div class="bt-1 border-color-1 mt-30 mb-30"></div>
                     <div class="detail-extralink">
-                      <div class="detail-qty border radius">
+                      <!-- <div class="detail-qty border radius">
                         <a href="#" class="qty-down"
                           ><i class="fi-rs-angle-small-down"></i
                         ></a>
@@ -749,9 +748,9 @@
                         <a href="#" class="qty-up"
                           ><i class="fi-rs-angle-small-up"></i
                         ></a>
-                      </div>
+                      </div> -->
                       <div class="product-extra-link2">
-                        <button type="submit" class="button button-add-to-cart">
+                        <button type="" class="button button-add-to-cart">
                           Add to cart
                         </button>
                         <a
