--- a/views/admin/addproduct.ejs
+++ b/views/admin/addproduct.ejs
@@ -110,6 +110,12 @@
             </div>
           </li> -->
           <li class="menu-item">
+            <a class="menu-link" href="/admin/view-all-orders">
+              <i class="icon material-icons md-shopping_cart"></i>
+              <span class="text">Order Management</span>
+            </a>
+          </li>
+          <li class="menu-item">
             <a class="menu-link" href="/admin/view-alluser">
               <i class="icon material-icons md-person"></i>
               <span class="text">User Management</span>
@@ -119,6 +125,12 @@
             <a class="menu-link" href="/admin/view-allcategory">
               <i class="icon material-icons md-stars"></i>
               <span class="text">Categories</span>
+            </a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link" href="/admin/view-allcategory">
+              <i class="icon material-icons md-local_offer"></i>
+              <span class="text">Coupon Management </span>
             </a>
           </li>
           <!-- <li class="menu-item">
@@ -753,6 +765,7 @@
         }
       }
     </script>
+
     <script src="/adminassets/js/vendors/jquery-3.6.0.min.js"></script>
     <script src="/adminassets/js/vendors/bootstrap.bundle.min.js"></script>
     <script src="/adminassets/js/vendors/select2.min.js"></script>
