--- a/views/admin/admincategory.ejs
+++ b/views/admin/admincategory.ejs
@@ -86,6 +86,12 @@
               <span class="text">Products</span>
             </a>
           </li>
+          <li class="menu-item">
+            <a class="menu-link" href="/admin/view-all-orders">
+              <i class="icon material-icons md-shopping_cart"></i>
+              <span class="text">Order Management</span>
+            </a>
+          </li>
 
           <!-- <li class="menu-item has-submenu">
             <a class="menu-link" href="page-transactions-1.html">
@@ -119,6 +125,12 @@
             <a class="menu-link" href="/admin/view-allcategory">
               <i class="icon material-icons md-stars"></i>
               <span class="text">Categories</span>
+            </a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link" href="/admin/view-allcategory">
+              <i class="icon material-icons md-local_offer"></i>
+              <span class="text">Coupon Management </span>
             </a>
           </li>
           <!-- <li class="menu-item">
@@ -488,3 +500,4 @@
 
   <!-- Mirrored from wp.alithemes.com/html/evara/evara-backend/page-categories.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 01 Aug 2021 15:33:21 GMT -->
 </html>
+c:\Users\asus\Desktop\evara-backend\page-orders-1.html
