--- a/views/admin/productsManagement.ejs
+++ b/views/admin/productsManagement.ejs
@@ -86,6 +86,12 @@
               <span class="text">Products</span>
             </a>
           </li>
+          <li class="menu-item">
+            <a class="menu-link" href="/admin/view-all-orders">
+              <i class="icon material-icons md-shopping_cart"></i>
+              <span class="text">Order Management</span>
+            </a>
+          </li>
 
           <!-- <li class="menu-item has-submenu">
             <a class="menu-link" href="page-transactions-1.html">
@@ -119,6 +125,12 @@
             <a class="menu-link" href="/admin/view-allcategory">
               <i class="icon material-icons md-stars"></i>
               <span class="text">Categories</span>
+            </a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link" href="/admin/view-allcategory">
+              <i class="icon material-icons md-local_offer"></i>
+              <span class="text">Coupon Management </span>
             </a>
           </li>
           <!-- <li class="menu-item">
@@ -279,7 +291,10 @@
                       <div class="form-check text-center"><%=i++ %></div>
                     </td>
                     <td>
-                      <div class="form-check text-center">
+                      <div
+                        class="form-check text-center"
+                        style="width: 6rem; height: 6rem"
+                      >
                         <% if (e && e.images && e.images.length > 0 &&
                         e.images[0].path) { %>
                         <img src="<%= e.images[0].path %>" alt="" />
@@ -335,7 +350,8 @@
                         >
                         <a
                           href="/admin/delete-product/<%=e.id%>"
-                          class="btn-sm btn-danger"
+                          class="btn-sm btn-danger DELETE"
+                          data-prduct-id="<%=e._id%>"
                           >Delete</a
                         >
                       </div>
@@ -390,6 +406,55 @@
         </div>
       </footer>
     </main>
+    <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        const deleteButtons = document.querySelectorAll(".DELETE");
+        deleteButtons.forEach((button) => {
+          button.addEventListener("click", async (event) => {
+            event.preventDefault();
+            const productId = button.getAttribute("data-prduct-id");
+            if (productId) {
+              Swal.fire({
+                title: "Are you sure?",
+                text: "You won't be able to revert this!",
+                icon: "warning",
+                showCancelButton: true,
+                confirmButtonColor: "#3085d6",
+                cancelButtonColor: "#d33",
+                confirmButtonText: "Yes, delete it!",
+              }).then((result) => {
+                if (result.isConfirmed) {
+                  fetch(`/admin/delete-product/${productId}`, {
+                    method: "DELETE", // Correct the spelling here
+                  })
+                    .then((response) => {
+                      if (response.status === 200) {
+                        Swal.fire({
+                          position: "top-center",
+                          icon: "success",
+                          title: "The product has been deleted.",
+                          showConfirmButton: false,
+                          timer: 1500,
+                        }).then(() => {
+                          // Reload the page after the alert is closed
+                          window.location.href = "/admin/view-all-products";
+                        });
+                      } else {
+                        console.error("Error deleting product.");
+                      }
+                    })
+                    .catch((error) => {
+                      console.error("An error occurred:", error);
+                    });
+                }
+              });
+            }
+          });
+        });
+      });
+    </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10.16.6/dist/sweetalert2.all.min.js"></script>
     <script src="/adminassets/js/vendors/jquery-3.6.0.min.js"></script>
     <script src="/adminassets/js/vendors/bootstrap.bundle.min.js"></script>
     <script src="/adminassets/js/vendors/select2.min.js"></script>
