--- a/views/admin/userManagement.ejs
+++ b/views/admin/userManagement.ejs
@@ -86,6 +86,12 @@
               <span class="text">Products</span>
             </a>
           </li>
+          <li class="menu-item">
+            <a class="menu-link" href="/admin/view-all-orders">
+              <i class="icon material-icons md-shopping_cart"></i>
+              <span class="text">Order Management</span>
+            </a>
+          </li>
 
           <!-- <li class="menu-item has-submenu">
             <a class="menu-link" href="page-transactions-1.html">
@@ -119,6 +125,12 @@
             <a class="menu-link" href="/admin/view-allcategory">
               <i class="icon material-icons md-stars"></i>
               <span class="text">Categories</span>
+            </a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link" href="">
+              <i class="icon material-icons md-local_offer"></i>
+              <span class="text">Coupon Management </span>
             </a>
           </li>
           <!-- <li class="menu-item">
